Method Deconstruction:
Split handleCreateChecksum in ChecksumCreatorController by extracting the actual logic to create the Hash into it's own separate method.

Extracted duplicated logic present in both FIleCheckController and ChecksumCreatorController into new common hashStream method in FileOperationController

Also added Accelerators to ChecksumCreatorController